--- a/Theater_ticket_booking/Theater_ticket_booking/wwwroot/package.json
+++ b/Theater_ticket_booking/Theater_ticket_booking/wwwroot/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "jquery.cookie": "^1.4.1"
+    "jquery.cookie": "^1.4.1",
+    "flatpickr": "^4.6.6"
   }
 }
