Добавлены функции бронирования и отмены заказа

--- a/Theater_ticket_booking/Theater_ticket_booking/wwwroot/package.json
+++ b/Theater_ticket_booking/Theater_ticket_booking/wwwroot/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-select": "^1.13.17",
+    "flatpickr": "^4.6.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "jquery.cookie": "^1.4.1",
-    "flatpickr": "^4.6.6"
+    "jquery.cookie": "^1.4.1"
   }
 }
